<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackfround">


    <RelativeLayout
        android:id="@+id/relative_bottom_stuff6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/custom_white_shape_layout">

        <com.shanaptech.sofra.Utils.MultiSelectionSpinner
            android:id="@+id/catSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_bottom_stuff13"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/relative_bottom_stuff6"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/custom_white_shape_layout">

        <EditText
            android:id="@+id/limit_time_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="@string/the_limit"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_bottom_stuff14"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/relative_bottom_stuff13"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/custom_white_shape_layout">

        <EditText
            android:id="@+id/delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="@string/delivert"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>


    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="Deliver Data "
        android:id="@+id/deliver_data"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relative_bottom_stuff14"/>

    <RelativeLayout
        android:id="@+id/relative_bottom_stuff9"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/deliver_data"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/custom_white_shape_layout">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="@string/phone"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_bottom_stuff10"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/relative_bottom_stuff9"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/custom_white_shape_layout">

        <EditText
            android:id="@+id/whatnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="@string/whatsApp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="Store Pic"
        android:id="@+id/resturant_photo"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relative_bottom_stuff10"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_shop"
        android:id="@+id/shop_img"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/resturant_photo"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/save"
        android:layout_below="@+id/shop_img"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_shape_layout"/>

</RelativeLayout>